// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/github/relationalView Comment authors has expected number of authors 1`] = `1`;

exports[`plugins/github/relationalView Comment authors have expected urls 1`] = `
Array [
  "https://github.com/wchargin",
]
`;

exports[`plugins/github/relationalView Comment has body 1`] = `"seems a bit capricious"`;

exports[`plugins/github/relationalView Comment has description 1`] = `"[comment](https://github.com/sourcecred-test/example-github/pull/5#discussion_r171460198) on [review](https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899) on [#5](https://github.com/sourcecred-test/example-github/pull/5): This pull request will be more contentious. I can feel it..."`;

exports[`plugins/github/relationalView Comment has parent 1`] = `
Object {
  "url": "https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899",
}
`;

exports[`plugins/github/relationalView Comment has reactions 1`] = `
Array [
  Object {
    "content": "THUMBS_UP",
    "timestampMs": 1537294753000,
    "user": Object {
      "login": "wchargin",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "THUMBS_DOWN",
    "timestampMs": 1537294755000,
    "user": Object {
      "login": "wchargin",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "THUMBS_UP",
    "timestampMs": 1537294756000,
    "user": Object {
      "login": "decentralion",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "LAUGH",
    "timestampMs": 1537294757000,
    "user": Object {
      "login": "wchargin",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "THUMBS_DOWN",
    "timestampMs": 1537294757000,
    "user": Object {
      "login": "decentralion",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "HOORAY",
    "timestampMs": 1537294758000,
    "user": Object {
      "login": "wchargin",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "LAUGH",
    "timestampMs": 1537294759000,
    "user": Object {
      "login": "decentralion",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "CONFUSED",
    "timestampMs": 1537294760000,
    "user": Object {
      "login": "wchargin",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "HOORAY",
    "timestampMs": 1537294761000,
    "user": Object {
      "login": "decentralion",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "HEART",
    "timestampMs": 1537294762000,
    "user": Object {
      "login": "wchargin",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "CONFUSED",
    "timestampMs": 1537294762000,
    "user": Object {
      "login": "decentralion",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
  Object {
    "content": "HEART",
    "timestampMs": 1537294764000,
    "user": Object {
      "login": "decentralion",
      "subtype": "USER",
      "type": "USERLIKE",
    },
  },
]
`;

exports[`plugins/github/relationalView Comment has timestampMs 1`] = `1519878210000`;

exports[`plugins/github/relationalView Comment has url 1`] = `"https://github.com/sourcecred-test/example-github/pull/5#discussion_r171460198"`;

exports[`plugins/github/relationalView Commit authors has expected number of authors 1`] = `1`;

exports[`plugins/github/relationalView Commit authors have expected urls 1`] = `
Array [
  "https://github.com/decentralion",
]
`;

exports[`plugins/github/relationalView Commit has description 1`] = `"[0a22334](https://github.com/sourcecred-test/example-github/commit/0a223346b4e6dec0127b1e6aa892c4ee0424b66a): Merge pull request #3 from sourcecred/add-readme"`;

exports[`plugins/github/relationalView Commit has message 1`] = `
"Merge pull request #3 from sourcecred/add-readme

Add README, merge via PR."
`;

exports[`plugins/github/relationalView Commit has timestampMs 1`] = `1519807427000`;

exports[`plugins/github/relationalView Commit has url 1`] = `"https://github.com/sourcecred-test/example-github/commit/0a223346b4e6dec0127b1e6aa892c4ee0424b66a"`;

exports[`plugins/github/relationalView Issue authors has expected number of authors 1`] = `1`;

exports[`plugins/github/relationalView Issue authors have expected urls 1`] = `
Array [
  "https://github.com/decentralion",
]
`;

exports[`plugins/github/relationalView Issue comments has expected number of comments 1`] = `8`;

exports[`plugins/github/relationalView Issue comments have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-373768703",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-373768850",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576185",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576220",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576248",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576273",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576920",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576936",
]
`;

exports[`plugins/github/relationalView Issue has body 1`] = `"This issue references another issue, namely #1"`;

exports[`plugins/github/relationalView Issue has description 1`] = `"[#2](https://github.com/sourcecred-test/example-github/issues/2): A referencing issue."`;

exports[`plugins/github/relationalView Issue has number 1`] = `"2"`;

exports[`plugins/github/relationalView Issue has parent 1`] = `
Object {
  "url": "https://github.com/sourcecred-test/example-github",
}
`;

exports[`plugins/github/relationalView Issue has reactions 1`] = `Array []`;

exports[`plugins/github/relationalView Issue has timestampMs 1`] = `1519807129000`;

exports[`plugins/github/relationalView Issue has title 1`] = `"A referencing issue."`;

exports[`plugins/github/relationalView Issue has url 1`] = `"https://github.com/sourcecred-test/example-github/issues/2"`;

exports[`plugins/github/relationalView Pull authors has expected number of authors 1`] = `1`;

exports[`plugins/github/relationalView Pull authors have expected urls 1`] = `
Array [
  "https://github.com/decentralion",
]
`;

exports[`plugins/github/relationalView Pull comments has expected number of comments 1`] = `1`;

exports[`plugins/github/relationalView Pull comments have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/pull/5#issuecomment-396430464",
]
`;

exports[`plugins/github/relationalView Pull has additions 1`] = `1`;

exports[`plugins/github/relationalView Pull has body 1`] = `
"@wchargin could you please do the following:
- add a commit comment
- add a review comment requesting some trivial change
- i'll change it
- then approve the pr"
`;

exports[`plugins/github/relationalView Pull has deletions 1`] = `0`;

exports[`plugins/github/relationalView Pull has description 1`] = `"[#5](https://github.com/sourcecred-test/example-github/pull/5): This pull request will be more contentious. I can feel it..."`;

exports[`plugins/github/relationalView Pull has mergedAs 1`] = `
Object {
  "id": "MDY6Q29tbWl0MTIzMjU1MDA2OjZkNWIzYWEzMWViYjY4YTA2Y2ViNDZiYmQ2Y2Y0OWI2Y2NkNmY1ZTY=",
  "type": "COMMIT",
}
`;

exports[`plugins/github/relationalView Pull has number 1`] = `"5"`;

exports[`plugins/github/relationalView Pull has parent 1`] = `
Object {
  "url": "https://github.com/sourcecred-test/example-github",
}
`;

exports[`plugins/github/relationalView Pull has reactions 1`] = `Array []`;

exports[`plugins/github/relationalView Pull has timestampMs 1`] = `1519807636000`;

exports[`plugins/github/relationalView Pull has title 1`] = `"This pull request will be more contentious. I can feel it..."`;

exports[`plugins/github/relationalView Pull has url 1`] = `"https://github.com/sourcecred-test/example-github/pull/5"`;

exports[`plugins/github/relationalView Pull reviews has expected number of reviews 1`] = `2`;

exports[`plugins/github/relationalView Pull reviews have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899",
  "https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100314038",
]
`;

exports[`plugins/github/relationalView RelationalView entity: comments has expected number of them 1`] = `19`;

exports[`plugins/github/relationalView RelationalView entity: comments they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/issues/11#issuecomment-420811872",
  "https://github.com/sourcecred-test/example-github/issues/11#issuecomment-420813013",
  "https://github.com/sourcecred-test/example-github/issues/11#issuecomment-420813206",
  "https://github.com/sourcecred-test/example-github/issues/11#issuecomment-420813621",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-373768703",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-373768850",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576185",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576220",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576248",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576273",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576920",
  "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576936",
  "https://github.com/sourcecred-test/example-github/issues/6#issuecomment-373768442",
  "https://github.com/sourcecred-test/example-github/issues/6#issuecomment-373768538",
  "https://github.com/sourcecred-test/example-github/issues/6#issuecomment-385223316",
  "https://github.com/sourcecred-test/example-github/issues/6#issuecomment-417104047",
  "https://github.com/sourcecred-test/example-github/pull/3#issuecomment-369162222",
  "https://github.com/sourcecred-test/example-github/pull/5#discussion_r171460198",
  "https://github.com/sourcecred-test/example-github/pull/5#issuecomment-396430464",
]
`;

exports[`plugins/github/relationalView RelationalView entity: commits has expected number of them 1`] = `6`;

exports[`plugins/github/relationalView RelationalView entity: commits they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/commit/0a223346b4e6dec0127b1e6aa892c4ee0424b66a",
  "https://github.com/sourcecred-test/example-github/commit/6bd1b4c0b719c22c688a74863be07a699b7b9b34",
  "https://github.com/sourcecred-test/example-github/commit/6d5b3aa31ebb68a06ceb46bbd6cf49b6ccd6f5e6",
  "https://github.com/sourcecred-test/example-github/commit/c430bd74455105f77215ece51945094ceeee6c86",
  "https://github.com/sourcecred-test/example-github/commit/ec91adb718a6045b492303f00d8e8beb957dc780",
  "https://github.com/sourcecred-test/example-github/commit/ecc889dc94cf6da17ae6eab5bb7b7155f577519d",
]
`;

exports[`plugins/github/relationalView RelationalView entity: issues has expected number of them 1`] = `10`;

exports[`plugins/github/relationalView RelationalView entity: issues they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/issues/1",
  "https://github.com/sourcecred-test/example-github/issues/10",
  "https://github.com/sourcecred-test/example-github/issues/11",
  "https://github.com/sourcecred-test/example-github/issues/12",
  "https://github.com/sourcecred-test/example-github/issues/13",
  "https://github.com/sourcecred-test/example-github/issues/2",
  "https://github.com/sourcecred-test/example-github/issues/4",
  "https://github.com/sourcecred-test/example-github/issues/6",
  "https://github.com/sourcecred-test/example-github/issues/7",
  "https://github.com/sourcecred-test/example-github/issues/8",
]
`;

exports[`plugins/github/relationalView RelationalView entity: pulls has expected number of them 1`] = `3`;

exports[`plugins/github/relationalView RelationalView entity: pulls they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/pull/3",
  "https://github.com/sourcecred-test/example-github/pull/5",
  "https://github.com/sourcecred-test/example-github/pull/9",
]
`;

exports[`plugins/github/relationalView RelationalView entity: reviews has expected number of them 1`] = `2`;

exports[`plugins/github/relationalView RelationalView entity: reviews they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899",
  "https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100314038",
]
`;

exports[`plugins/github/relationalView RelationalView entity: userlikes has expected number of them 1`] = `3`;

exports[`plugins/github/relationalView RelationalView entity: userlikes they have expected urls 1`] = `
Array [
  "https://github.com/credbot",
  "https://github.com/decentralion",
  "https://github.com/wchargin",
]
`;

exports[`plugins/github/relationalView Repo has description 1`] = `"[sourcecred-test/example-github](https://github.com/sourcecred-test/example-github)"`;

exports[`plugins/github/relationalView Repo has name 1`] = `"example-github"`;

exports[`plugins/github/relationalView Repo has owner 1`] = `"sourcecred-test"`;

exports[`plugins/github/relationalView Repo has timestampMs 1`] = `1519807034000`;

exports[`plugins/github/relationalView Repo has url 1`] = `"https://github.com/sourcecred-test/example-github"`;

exports[`plugins/github/relationalView Repo issues has expected number of issues 1`] = `10`;

exports[`plugins/github/relationalView Repo issues have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/issues/1",
  "https://github.com/sourcecred-test/example-github/issues/10",
  "https://github.com/sourcecred-test/example-github/issues/11",
  "https://github.com/sourcecred-test/example-github/issues/12",
  "https://github.com/sourcecred-test/example-github/issues/13",
  "https://github.com/sourcecred-test/example-github/issues/2",
  "https://github.com/sourcecred-test/example-github/issues/4",
  "https://github.com/sourcecred-test/example-github/issues/6",
  "https://github.com/sourcecred-test/example-github/issues/7",
  "https://github.com/sourcecred-test/example-github/issues/8",
]
`;

exports[`plugins/github/relationalView Repo pulls has expected number of pulls 1`] = `3`;

exports[`plugins/github/relationalView Repo pulls have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/pull/3",
  "https://github.com/sourcecred-test/example-github/pull/5",
  "https://github.com/sourcecred-test/example-github/pull/9",
]
`;

exports[`plugins/github/relationalView Review authors has expected number of authors 1`] = `1`;

exports[`plugins/github/relationalView Review authors have expected urls 1`] = `
Array [
  "https://github.com/wchargin",
]
`;

exports[`plugins/github/relationalView Review comments has expected number of comments 1`] = `1`;

exports[`plugins/github/relationalView Review comments have expected urls 1`] = `
Array [
  "https://github.com/sourcecred-test/example-github/pull/5#discussion_r171460198",
]
`;

exports[`plugins/github/relationalView Review has body 1`] = `"hmmm.jpg"`;

exports[`plugins/github/relationalView Review has description 1`] = `"[review](https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899) on [#5](https://github.com/sourcecred-test/example-github/pull/5): This pull request will be more contentious. I can feel it..."`;

exports[`plugins/github/relationalView Review has parent 1`] = `
Object {
  "url": "https://github.com/sourcecred-test/example-github/pull/5",
}
`;

exports[`plugins/github/relationalView Review has state 1`] = `"CHANGES_REQUESTED"`;

exports[`plugins/github/relationalView Review has timestampMs 1`] = `1519878210000`;

exports[`plugins/github/relationalView Review has url 1`] = `"https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899"`;

exports[`plugins/github/relationalView Userlike has description 1`] = `"github/[@wchargin](https://github.com/wchargin)"`;

exports[`plugins/github/relationalView Userlike has login 1`] = `"wchargin"`;

exports[`plugins/github/relationalView Userlike has timestampMs 1`] = `null`;

exports[`plugins/github/relationalView Userlike has url 1`] = `"https://github.com/wchargin"`;

exports[`plugins/github/relationalView reaction detection set of all reactions matches snapshot 1`] = `
Object {
  "https://github.com/sourcecred-test/example-github/issues/1": Array [
    Object {
      "content": "LAUGH",
      "timestampMs": 1536878099000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "HEART",
      "timestampMs": 1536878100000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
  ],
  "https://github.com/sourcecred-test/example-github/issues/11#issuecomment-420813206": Array [
    Object {
      "content": "THUMBS_UP",
      "timestampMs": 1536952413000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "THUMBS_DOWN",
      "timestampMs": 1536952415000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "LAUGH",
      "timestampMs": 1536952417000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "HOORAY",
      "timestampMs": 1536952420000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
  ],
  "https://github.com/sourcecred-test/example-github/issues/12": Array [
    Object {
      "content": "THUMBS_UP",
      "timestampMs": 1536878091000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
  ],
  "https://github.com/sourcecred-test/example-github/issues/13": Array [
    Object {
      "content": "THUMBS_UP",
      "timestampMs": 1536878140000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "THUMBS_DOWN",
      "timestampMs": 1536878142000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "LAUGH",
      "timestampMs": 1536878143000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "HOORAY",
      "timestampMs": 1536878144000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "CONFUSED",
      "timestampMs": 1536878147000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "HEART",
      "timestampMs": 1536878149000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "ROCKET",
      "timestampMs": 1548353975000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "EYES",
      "timestampMs": 1548353977000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
  ],
  "https://github.com/sourcecred-test/example-github/pull/5#discussion_r171460198": Array [
    Object {
      "content": "THUMBS_UP",
      "timestampMs": 1537294753000,
      "user": Object {
        "login": "wchargin",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "THUMBS_DOWN",
      "timestampMs": 1537294755000,
      "user": Object {
        "login": "wchargin",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "THUMBS_UP",
      "timestampMs": 1537294756000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "LAUGH",
      "timestampMs": 1537294757000,
      "user": Object {
        "login": "wchargin",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "THUMBS_DOWN",
      "timestampMs": 1537294757000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "HOORAY",
      "timestampMs": 1537294758000,
      "user": Object {
        "login": "wchargin",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "LAUGH",
      "timestampMs": 1537294759000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "CONFUSED",
      "timestampMs": 1537294760000,
      "user": Object {
        "login": "wchargin",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "HOORAY",
      "timestampMs": 1537294761000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "HEART",
      "timestampMs": 1537294762000,
      "user": Object {
        "login": "wchargin",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "CONFUSED",
      "timestampMs": 1537294762000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "HEART",
      "timestampMs": 1537294764000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
  ],
  "https://github.com/sourcecred-test/example-github/pull/5#issuecomment-396430464": Array [
    Object {
      "content": "HEART",
      "timestampMs": 1536952482000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "CONFUSED",
      "timestampMs": 1536952484000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
  ],
  "https://github.com/sourcecred-test/example-github/pull/9": Array [
    Object {
      "content": "HEART",
      "timestampMs": 1536952427000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
    Object {
      "content": "THUMBS_UP",
      "timestampMs": 1536952428000,
      "user": Object {
        "login": "decentralion",
        "subtype": "USER",
        "type": "USERLIKE",
      },
    },
  ],
}
`;

exports[`plugins/github/relationalView reference detection references match snapshot 1`] = `
Array [
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2",
    "to": "https://github.com/sourcecred-test/example-github/issues/1",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/10",
    "to": "https://github.com/sourcecred-test/example-github/issues/10",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/10",
    "to": "https://github.com/sourcecred-test/example-github/issues/2",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/12",
    "to": "https://github.com/sourcecred-test/example-github/commit/ec91adb718a6045b492303f00d8e8beb957dc780",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/12",
    "to": "https://github.com/sourcecred-test/example-github/commit/ecc889dc94cf6da17ae6eab5bb7b7155f577519d",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/pull/5",
    "to": "https://github.com/wchargin",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-373768703",
    "to": "https://github.com/sourcecred-test/example-github/issues/6",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-373768850",
    "to": "https://github.com/sourcecred-test/example-github/issues/6#issuecomment-373768538",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576185",
    "to": "https://github.com/sourcecred-test/example-github/pull/5",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576220",
    "to": "https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576248",
    "to": "https://github.com/sourcecred-test/example-github/pull/5#discussion_r171460198",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576273",
    "to": "https://github.com/wchargin",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred-test/example-github/issues/1",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred-test/example-github/issues/2",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred-test/example-github/pull/3",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred-test/example-github/pull/5#discussion_r171460198",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/issues/6#issuecomment-385223316",
    "to": "https://github.com/sourcecred-test/example-github/issues/2",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/pull/3#issuecomment-369162222",
    "to": "https://github.com/sourcecred-test/example-github/issues/2",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/commit/0a223346b4e6dec0127b1e6aa892c4ee0424b66a",
    "to": "https://github.com/sourcecred-test/example-github/pull/3",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/commit/6d5b3aa31ebb68a06ceb46bbd6cf49b6ccd6f5e6",
    "to": "https://github.com/sourcecred-test/example-github/pull/5",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/commit/6bd1b4c0b719c22c688a74863be07a699b7b9b34",
    "to": "https://github.com/wchargin",
  },
  Object {
    "from": "https://github.com/sourcecred-test/example-github/commit/c430bd74455105f77215ece51945094ceeee6c86",
    "to": "https://github.com/wchargin",
  },
]
`;

exports[`plugins/github/relationalView urlReferenceMap should match example snapshot 1`] = `
Array [
  Array [
    "https://github.com/credbot",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"USERLIKE\\",\\"BOT\\",\\"credbot\\"]",
  ],
  Array [
    "https://github.com/decentralion",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"USERLIKE\\",\\"USER\\",\\"decentralion\\"]",
  ],
  Array [
    "https://github.com/sourcecred-test/example-github",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"REPO\\",\\"sourcecred-test\\",\\"example-github\\"]",
  ],
  Array [
    "https://github.com/sourcecred-test/example-github/commit/0a223346b4e6dec0127b1e6aa892c4ee0424b66a",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"COMMIT\\",\\"MDY6Q29tbWl0MTIzMjU1MDA2OjBhMjIzMzQ2YjRlNmRlYzAxMjdiMWU2YWE4OTJjNGVlMDQyNGI2NmE=\\"]",
  ],
  Array [
    "https://github.com/sourcecred-test/example-github/issues/1",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"ISSUE\\",\\"sourcecred-test\\",\\"example-github\\",\\"1\\"]",
  ],
  Array [
    "https://github.com/sourcecred-test/example-github/issues/2#issuecomment-373768703",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"COMMENT\\",\\"ISSUE\\",\\"sourcecred-test\\",\\"example-github\\",\\"2\\",\\"373768703\\"]",
  ],
  Array [
    "https://github.com/sourcecred-test/example-github/pull/3",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"PULL\\",\\"sourcecred-test\\",\\"example-github\\",\\"3\\"]",
  ],
  Array [
    "https://github.com/sourcecred-test/example-github/pull/3#issuecomment-369162222",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"COMMENT\\",\\"PULL\\",\\"sourcecred-test\\",\\"example-github\\",\\"3\\",\\"369162222\\"]",
  ],
  Array [
    "https://github.com/sourcecred-test/example-github/pull/5#discussion_r171460198",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"COMMENT\\",\\"REVIEW\\",\\"sourcecred-test\\",\\"example-github\\",\\"5\\",\\"100313899\\",\\"171460198\\"]",
  ],
  Array [
    "https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899",
    "NodeAddress[\\"sourcecred\\",\\"github\\",\\"REVIEW\\",\\"sourcecred-test\\",\\"example-github\\",\\"5\\",\\"100313899\\"]",
  ],
]
`;
